@@ -8,15 +8,16 @@
 # use : ./jpress.sh {start, stop, restart}
 # ----------------------------------------------------------------------
 
-command="$1"
+# 启动入口类，该脚本文件用于别的项目时要改这里
+MAIN_CLASS=io.jboot.app.JbootApplication
+COMMAND="$1"
 
-if [[ "$command" != "start" ]] && [[ "$command" != "stop" ]] && [[ "$command" != "restart" ]]; then
+if [[ "$COMMAND" != "start" ]] && [[ "$COMMAND" != "stop" ]] && [[ "$COMMAND" != "restart" ]]; then
 	echo "./jpress.sh {start, stop, restart}"
 	exit 0
 fi
 
-# 启动入口类，该脚本文件用于别的项目时要改这里
-MAIN_CLASS=io.jboot.app.JbootApplication
+
 
 # Java 命令行参数，根据需要开启下面的配置，改成自己需要的，注意等号前后不能有空格
 # JAVA_OPTS="-Xms256m -Xmx1024m -Dundertow.port=80 -Dundertow.host=0.0.0.0"
@@ -28,7 +29,7 @@ CP=${APP_BASE_PATH}/config:${APP_BASE_PATH}/lib/*
 
 function start()
 {
-  # 运行为后台进程，并在控制台输出信息
+    # 运行为后台进程，并在控制台输出信息
     java -Xverify:none ${JAVA_OPTS} -cp ${CP} ${MAIN_CLASS} &
 
     # 运行为后台进程，并且不在控制台输出信息
@@ -43,23 +44,16 @@ function start()
 
 function stop()
 {
-    # 运行为后台进程，并在控制台输出信息
     kill `pgrep -f ${MAIN_CLASS}` 2>/dev/null
 
-    # 运行为后台进程，并且不在控制台输出信息
-    # nohup java -Xverify:none ${JAVA_OPTS} -cp ${CP} ${MAIN_CLASS} >/dev/null 2>&1 &
-
-    # 运行为后台进程，并且将信息输出到 output.log 文件
-    # nohup java -Xverify:none ${JAVA_OPTS} -cp ${CP} ${MAIN_CLASS} > output.log &
-
-    # 运行为非后台进程，多用于开发阶段，快捷键 ctrl + c 可停止服务
-    # java -Xverify:none ${JAVA_OPTS} -cp ${CP} ${MAIN_CLASS}
+    # 以下代码与上述代码等价
+    # kill $(pgrep -f ${MAIN_CLASS}) 2>/dev/null
 
 }
 
-if [[ "$command" == "start" ]]; then
+if [[ "$COMMAND" == "start" ]]; then
 	start
-elif [[ "$command" == "stop" ]]; then
+elif [[ "$COMMAND" == "stop" ]]; then
     stop
 else
     stop
